added image api and rendering

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=dev-d6wv3n4r.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=awNZiUntlXcgAkPUmKWDyIeqWk2QGQkk
+REACT_APP_API_SERVER=http://localhost:3001/api
