--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-oauth2-jwt-bearer": "^1.1.0",
-    "express-openid-connect": "^2.7.2",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   }
